Wed Aug 17 12:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/ami_handler_reply_stub_operation_cs.cpp:
          Generate explicit casts to suppress warnings at level 4 with msvc7

Wed Aug 17 10:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Upcall_Wrapper.cpp:
        * tao/ServerRequestInterceptor_Adapter.h:
        * tao/TAO_Server_Request.{h,cpp,i}:
        * tao/PI_Server/ServerInterceptorAdapter.{h,cpp}:
          Made PICurrent working again

Wed Aug 17 08:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_arg_traits.cpp
        * tao/AnyTypeCode_Adapter.h
        * tao/BD_String_Argument_T.h
        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.cpp
        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.h
        * tao/PortableServer/BD_String_SArgument_T.h
          Removed the specialization for bound (w)string from the TAO
          lib and just generate the full Arg_Trait in the IDL compiler,
          this makes it not needed anymore to have an insertion
          method for the bound (w)string in the AnyTypeCode adapter

Tue Aug 16 20:03:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface_fwd/any_op_ch.cpp:
          Generate the correct export macro

Tue Aug 16 19:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/*:
          Regenerated

Tue Aug 16 18:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Removed pragma push/pop for msvs, those warnings are already
          disabled in general

        * tao/Array_VarOut_T.{h,inl}:
          In the TAO_Array_Forany_T make the pointer in the constructor
          const to get things compiling with the new any insertion

Mon Aug 15 19:56:10 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_nodule/module_ch.cpp:
